--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "autoprefixer": "^10.4.14",
         "tailwindcss": "^3.3.2",
         "vue-loader": "^17.0.1",
-        "vue-router": "^4.2.2"
+        "vue-router": "^4.2.2",
+        "vuetify": "^3.3.6"
     }
 }
