--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "dependencies": {
         "@vue/compiler-sfc": "^3.3.4",
         "autoprefixer": "^10.4.14",
+        "laravel-echo": "^1.15.3",
+        "pusher-js": "^8.3.0",
         "tailwindcss": "^3.3.2",
         "vue-loader": "^17.0.1",
         "vue-router": "^4.2.2",
