--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "laravel-echo": "^1.15.3",
         "pusher-js": "^8.3.0",
         "tailwindcss": "^3.3.2",
+        "vue-i18n": "^9.8.0",
         "vue-loader": "^17.0.1",
         "vue-router": "^4.2.2",
         "vuetify": "^3.3.6"
